@@ -1,5 +1,16 @@
 2012-10-15  Eugene Klyuchnikov  <eustas.bug@gmail.com>
 
+        Web Inspector: Fix memory leak in TreeOutline
+        https://bugs.webkit.org/show_bug.cgi?id=99307
+
+        Reviewed by Alexander Pavlov.
+
+        Added cleanup of empty buckets in elements cache.
+
+        * inspector/front-end/treeoutline.js:
+
+2012-10-15  Eugene Klyuchnikov  <eustas.bug@gmail.com>
+
         Web Inspector: Hide useless controls in remote-debugging mode.
         https://bugs.webkit.org/show_bug.cgi?id=99300
 
